fixing top filters

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -26,6 +26,7 @@
 }
 .search-btn {
     font-size: 18px;
+    margin-top: 13px;
     background-color: #ff5a5f;
     color: #ffffff;
     height: 48px;
